--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Jenkins test file</title>
 </head>
 <body>
-<p>This is the first version of the index</p>
+<p>This is the second version of the index</p>
 </body>
 </html>
